--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/commons-lang3-3.3.1.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/commons-lang3-3.3.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/jcalendarbutton-1.4.5.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/joda-time-2.3.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/joda-time-2.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/mysql-connector-java-5.1.30.jar"/>
+	<classpathentry kind="lib" path="D:/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
