--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/extjars/lanterna-2.1.7.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/D:/extjars/lanterna-2.1.7-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
