--- a/.classpath
+++ b/.classpath
@@ -9,10 +9,6 @@
 	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/joda-time-2.3-javadoc.jar"/>
 	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/mysql-connector-java-5.1.30.jar"/>
 	<classpathentry kind="lib" path="D:/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="D:/extjars/lanterna-2.1.7.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/D:/extjars/lanterna-2.1.7-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="D:/Users/zascho/Downloads/lanterna-2.1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
