--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 password=
-database=jdbc:mysql://localhost:3307/jaccess
+database=jdbc:mysql://192.168.3.168:3307/jaccess
 user=jaccess
 
 server=//localhost/Server
