--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="T:/_Team/zascho/08 - Anwendungsentwicklung/workspace/jAccess/libs/commons-lang3-3.3.1.jar"/>
-	<classpathentry kind="lib" path="T:/_Team/zascho/08 - Anwendungsentwicklung/workspace/jAccess/libs/commons-lang3-3.3.1-javadoc.jar"/>
-	<classpathentry kind="lib" path="T:/_Team/zascho/08 - Anwendungsentwicklung/workspace/jAccess/libs/mysql-connector-java-5.1.30.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/commons-lang3-3.3.1.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/commons-lang3-3.3.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/mysql-connector-java-5.1.30.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="T:/Public/Software/Tools/Java/Lib/jcommon-1.0.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
